$Id$

2020-04-05  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Silicon Motion based SSDs: Add attributes 159 and 231 (#1304)
	- Seagate BarraCuda 3.5: Rename, merge entries,
	  add ST2000DM008 (#1179, #1252, #1286), ST10000DM0004
	- Seagate Exos X14: ST12000NM0538 (#1256)
	- Seagate Exos X16 (#1291, #1301)
	- Seagate Skyhawk (#1039)

2020-04-04  Christian Franke  <franke@computer.org>

	dev_jmb39x_raid.cpp: Add '-d jms56x,...' device type for protocol
	variant used by JMS562 USB to SATA RAID bridges (#1314).
	dev_interface.cpp: Parse '-d jms56x*[+TYPE]' option, update help text.
	smartctl.8.in, smartd.conf.5.in: Document new option.

2020-03-29  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Ultrastar He10/12: Rename, add He12
	  (#1308, GH issues/51)
	- Western Digital Ultrastar DC HC530 (#1257)
	- Western Digital Green: WD5000AZRX (#1072)
	- Western Digital Red: WD120EMFZ (GH issues/49)
	- Western Digital Purple: WD*PURZ, WD80PUZX (#1057)
	- Western Digital Gold: WD6003FRYZ
	- Western Digital Blue Mobile: Rename, re-add WD10JPVX
	  (removed in r4991)
	- Western Digital Elements / My Passport (USB, AF):
	  WD10SMZW (#1088), WD50NDZW

2020-03-28  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 1100 SSDs: CT1000BX500SSD1,
	  MTFDDAK* (#1276)
	- Kingston SSDNow UV400/500: Rename, add UV500 (#1126)
	- Silicon Motion based SSDs: KingDian S100/200, Kingdian S280 1TB,
	  Kingston KC600 (#1304), Transcend MTS420S (#1280),
	  Transcend 360S (#1282)
	- Seagate IronWolf Pro: ST4000NE001
	- Western Digital RE3 Serial ATA: WD*BYS-* variant
	- Western Digital Gold: WD4003FRYZ (#1289), WD8004FRYZ (#1287)
	- USB: 0x0860:0x0001 (#1295)
	- USB: JMicron (0x152d:0x1337) (#1296)
	- USB: Corsair SSD & HDD Cloning Kit (0x0984:0x0301) (#1307)

2020-03-25  Christian Franke  <franke@computer.org>

	smartd.cpp: Set 'SMARTD_DEVICETYPE=auto' if DEVICESCAN is used
	without '-d TYPE' directive (GH issues/52).
